--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -26,8 +26,11 @@
       // Number.parseInt(string) faz parse de string para int
       // Number.parseFloat(string) faz parse de string para ponto flutuante
       
-      var soma = Number.parseInt(n1) + Number.parseInt(n2);
-      window.alert("A soma dos números é :" + soma)
+      var soma = Number.parseInt(n1) + Number(n2);
+
+      // No tipo mais novo podemos utilizar Number(n)
+
+      window.alert("A soma dos números é :" + String(soma) )
     </script>
 </body>
 </html>
